[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "defter-argekod"
version = "0.96.1"
authors = [
  { name="argekod"},
]
description = "Görsel bir not tutma uygulaması. (A visual note-taking app.)"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["note taking", "freeform", "drawing", "visual", 
"graphics", "lighttable", "html generator", "PDF generator" ,"PySide6"]
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Turkish",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Education",
    "Topic :: Multimedia :: Graphics"
]

dependencies = [
    'PySide6',
]


[project.urls]
Homepage = "https://github.com/erdincyz/defter"
Issues = "https://github.com/erdincyz/defter/issues"


[project.scripts]
defter = "defter.defter:calistir"

[tool.setuptools.package-data]
defter = ["defter_tr_TR.qm"]
